# claude-commander

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  PHASES_1-4_SUMMARY.md  README.md  docker-compose.build.yml  index.html  package-lock.json  package.json  run-dev.sh  tsconfig.json  vite.config.ts
.github/: SECURITY.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_manager.rs  agent_runs_db.rs  ai_client.rs  claude_client.rs  claudemd_generator.rs  cost_tracker.rs  cost_tracker_db.rs  db_utils.rs  elevation.rs  error.rs  events.rs  first_run.rs  github.rs  hook_server.rs  instruction_manager.rs  lib.rs  logger.rs  main.rs  meta_agent.rs  orchestrator.rs  pipeline_manager.rs  pool_manager.rs  skill_generator.rs  subagent_generator.rs  thread_controller.rs  tool_registry.rs  types.rs  verification.rs
src-tauri/src/agent_manager/: claude_cli.rs  database_ops.rs  event_handlers.rs  message_handlers.rs  mod.rs  output_builder.rs  process_spawner.rs  result_handlers.rs  statistics.rs  stream_handler.rs  stream_parser.rs  types.rs
src-tauri/src/agent_runs_db/: cost.rs  crud.rs  meta_conversations.rs  mod.rs  models.rs  orchestrator_events.rs  queries.rs  schema.rs
src-tauri/src/ai_client/: error.rs  mod.rs  models.rs  types.rs
src-tauri/src/auto_pipeline/: advisor.rs  agent_utils.rs  mod.rs  orchestrator.rs  orchestrator_tools.rs  prompts.rs  replay.rs  skill_matcher.rs  state_machine.rs  steps.rs  task_analyzer.rs  types.rs
src-tauri/src/commands/: agent.rs  api_validator.rs  auto_pipeline.rs  chat.rs  config.rs  config_loader.rs  cost.rs  database.rs  events.rs  findings_analyzer.rs  instruction.rs  instruction_analysis.rs  instruction_generator.rs  instruction_wizard.rs  logging.rs  markdown_parser.rs  mod.rs  pipeline.rs  pool.rs  security.rs  skill.rs  validation_patterns.rs  workflow.rs
src-tauri/src/hook_server/: elevated_commands.rs  mod.rs  tool_tracking.rs
src-tauri/src/meta_agent/: action_logger.rs  context_config.rs  context_summarizer.rs  context_tracker.rs  conversation_manager.rs  helpers.rs  memory_manager.rs  memory_worker.rs  mod.rs  output_compressor.rs  prompt_generator.rs  result_queue.rs  search_agent.rs  system_prompt.rs  tool_loop_engine.rs
src-tauri/src/pipeline_manager/: config.rs  mod.rs  types.rs
(+348 files in other folders)
